--- a/Order grocery delivery.html
+++ b/Order grocery delivery.html
@@ -1119,7 +1119,7 @@
     </footer>
     <!-- Footer ends Here -->
 
-    <script src="/Order grocery delivery.js"></script>
+    <script src="./Order grocery delivery.js"></script>
 </body>
 
 </html>
