--- a/Order grocery delivery6.html
+++ b/Order grocery delivery6.html
@@ -1104,7 +1104,7 @@
     </footer>
     <!-- Footer ends Here -->
 
-    <script src="/Order grocery delivery.js"></script>
+    <script src="./Order grocery delivery.js"></script>
 </body>
 
 </html>
