--- a/Dining Out Restaurants6.html
+++ b/Dining Out Restaurants6.html
@@ -11,7 +11,7 @@
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/Dining Out Restaurants6.css">
+    <link rel="stylesheet" href="./Dining Out Restaurants6.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
@@ -84,7 +84,7 @@
     <div class="container">
         <ul class="two-text-items mx-4">
             <li class="nav-item">
-                <a class="nav-link order" aria-current="page" href="/Order Food Online6.html">Order Online</a>
+                <a class="nav-link order" aria-current="page" href="./Order Food Online6.html">Order Online</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link active dineout" aria-current="page" href="#">Dineout</a>
@@ -716,7 +716,7 @@
     <!-- Footer ends here -->
 
 
-    <script src="/Dining Out Restaurants6.js"></script>
+    <script src="./Dining Out Restaurants6.js"></script>
 </body>
 
 </html>
