--- a/Order Food Online7.html
+++ b/Order Food Online7.html
@@ -11,7 +11,7 @@
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
-    <link rel="stylesheet" href="Order Food Online7.css">
+    <link rel="stylesheet" href="./Order Food Online7.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
@@ -90,7 +90,7 @@
                 <a class="nav-link order" aria-current="page" href="#">Order Online</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active dineout" aria-current="page" href="/Dining Out Restaurtants7.html">Dineout</a>
+                <a class="nav-link active dineout" aria-current="page" href="./Dining Out Restaurtants7.html">Dineout</a>
             </li>
             <hr id="horizontal-line2" class="mx-5" />
             <div class="colororange">
@@ -710,7 +710,7 @@
     <!-- Footer ends here -->
 
 
-    <script src="/Order Food Online7.js"></script>
+    <script src="./Order Food Online7.js"></script>
 </body>
 
 </html>
