--- a/Partner with us.html
+++ b/Partner with us.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <title>Partner With Swiggy:Join Us And Boost Your Restaurant's Growth</title>
-    <link rel="stylesheet" href="/Partner with us.css">
+    <link rel="stylesheet" href="./Partner with us.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
@@ -148,7 +148,7 @@
         </div>
     </div>
 
-    <script src="/Partner with us.js"></script>
+    <script src="./Partner with us.js"></script>
 </body>
 
 </html>
