--- a/Swiggy.html
+++ b/Swiggy.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <title>Order Food & Groceries. Discover the best restaurants.Swiggy it!</title>
-    <link href="/Swiggy.css" rel="stylesheet" />
+    <link href="./Swiggy.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -18,10 +18,10 @@
     <header>
         <nav id="nav-bar">
             <ul class="nav-items">
-                <a href="Swiggy.html"><img alt="" class="Swiggy-logo" height="100%" loading="lazy" width="100%"
+                <a href="./Swiggy.html"><img alt="" class="Swiggy-logo" height="100%" loading="lazy" width="100%"
                         src="https://res.cloudinary.com/dutdah0l9/image/upload/v1720058694/Swiggy_logo_bml6he.png" /></a>
                 <li class="main-nav-items"><a href="./our Bussiness.html">Swiggy Corporate</a></li>
-                <li class="main-nav-items"><a href="/Partner with us.html" target="_blank">Partner with us</a></li>
+                <li class="main-nav-items"><a href="./Partner with us.html" target="_blank">Partner with us</a></li>
                 <button class="btn" id="getApp">Get the App
                     <div style="line-height:0" class="Arrowicon"><svg width="21" height="21" viewBox="0 0 21 21"
                             fill="none" aria-label="rating-up-down-icon" aria-hidden="false" strokecolor="#FFFFFF"
@@ -411,14 +411,14 @@
         <section>
             <h6 class="Swiggy-text mt-5">Cities with food delivery</h6>
             <div class="Swiggy-element">
-                <div class="Swiggy-boxes"><a href="/Dining Out Restaurants.html">Order food online in Bangalore</a></div>
-                <div class="Swiggy-boxes"><a href="/Dining Out Restaurants2.html">Order food online in Gurgaon</a></div>
-                <div class="Swiggy-boxes"><a href="/Dining Out Restaurants3.html">Order food online in Hyderabad</a></div>
-                <div class="Swiggy-boxes"><a href="/Dining Out Restaurants4.html">Order food online in Delhi</a></div>
-                <div class="Swiggy-boxes"><a href="/Dining Out Restaurants5.html">Order food online in Mumbai</a></div>
-                <div class="Swiggy-boxes"><a href="/Dining Out Restaurants8.html">Order food online in Pune</a></div>
-                <div class="Swiggy-boxes"><a href="/Dining Out Restaurtants7.html">Order food online in Kolkata</a></div>
-                <div class="Swiggy-boxes"><a href="/Dining Out Restaurants6.html">Order food online in Chennai</a></div>
+                <div class="Swiggy-boxes"><a href="./Dining Out Restaurants.html">Order food online in Bangalore</a></div>
+                <div class="Swiggy-boxes"><a href="./Dining Out Restaurants2.html">Order food online in Gurgaon</a></div>
+                <div class="Swiggy-boxes"><a href="./Dining Out Restaurants3.html">Order food online in Hyderabad</a></div>
+                <div class="Swiggy-boxes"><a href="./Dining Out Restaurants4.html">Order food online in Delhi</a></div>
+                <div class="Swiggy-boxes"><a href="./Dining Out Restaurants5.html">Order food online in Mumbai</a></div>
+                <div class="Swiggy-boxes"><a href="./Dining Out Restaurants8.html">Order food online in Pune</a></div>
+                <div class="Swiggy-boxes"><a href="./Dining Out Restaurtants7.html">Order food online in Kolkata</a></div>
+                <div class="Swiggy-boxes"><a href="./Dining Out Restaurants6.html">Order food online in Chennai</a></div>
                 <div class="Swiggy-boxes"><a href="#">Order food online in <br />Ahmedabad</a></div>
                 <div class="Swiggy-boxes"><a href="#">Order food online in <br />Chandigarh</a></div>
                 <div class="Swiggy-boxes"><a href="#">Order food online in Jaipur</a></div>
@@ -547,7 +547,7 @@
     </div>
     <!-- Footer ends here -->
      
-    <script src="Swiggy.js"></script>
+    <script src="./Swiggy.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
